--- a/css/styles.scss
+++ b/css/styles.scss
@@ -14,6 +14,7 @@ $text_javadocKeyword: #D9E577;
     background: none;
     cursor: pointer;
     border:none;
+    outline: none;
 }
 
 @mixin set_button{
@@ -23,12 +24,14 @@ $text_javadocKeyword: #D9E577;
     color: $text_main;
     background-color: $background;
     border: 1px solid $text_main;
+    outline: none;
     margin: 0.4rem;
     cursor: pointer;
 }
 
 @mixin remove_default_btn{
     border: none;
+    outline: none;
     display: inline-block;
     text-decoration: none;
     background-color: $background;
@@ -38,10 +41,6 @@ $text_javadocKeyword: #D9E577;
     text-align: left;
     padding: 0;
     cursor: pointer;
-}
-
-@mixin btn_focus{
-    outline: none;  
 }
 
 @mixin btn_active{
@@ -87,11 +86,7 @@ body{
                         max-height: 1.2rem;
                         min-width: 1.2rem;
                     }
-                }
-
-                #settings_btn:focus{
-                    @include btn_focus();
-                }             
+                }            
                                 
                 .dropdown{
                     display: none;
@@ -99,58 +94,22 @@ body{
                     position: absolute;
                     z-index: 1;
                     right: 9%;
-                    background-color: $background;
+                    background-color: $background;                    
+
+                    img{
+                        max-height: 1rem;
+                        min-width: 1rem;
+                        padding-top: 0.2rem;
+                    }
 
                     .set_btn{
                         @include set_button();
-                    }
-                    
-                    .set_btn:focus{
-                        @include btn_focus();
                     }
 
                     .set_btn:active{
                         @include btn_active();
                         border:1px solid $text_class;
-                    }
-
-                    .set_btn_dark{
-                        @include set_button();
-                        color: #FFFFFF;
-                        background-color: #1E1E1E;
-                        text-decoration: underline;
-                        border: 1px solid #FFFFFF;
-                    }
-
-                    .set_btn_dark:focus{
-                        @include btn_focus();
-                    }
-
-                    .set_btn_dark:active{
-                        @include btn_active();
-                        border:1px solid $text_class;
-                    }
-
-                    .set_btn_light{
-                        @include set_button();
-                        color: #1E1E1E;
-                        background-color: #FFFFFF;
-                        text-decoration: underline;
-                        border: 1px solid #1E1E1E;
-                    }
-
-                    .set_btn_light:focus{
-                        @include btn_focus();
-                    }
-
-                    .set_btn_light:active{
-                        @include btn_active();
-                        border:1px solid $text_class;
-                    }
-
-                    #space{
-                        height: 1rem;
-                    }
+                    }                                                           
                 }                
             }
         }
@@ -181,10 +140,6 @@ body{
                     }
                 }   
                 
-                #mob_menu_btn:focus{
-                    @include btn_focus();
-                }  
-
                 .dropdown{
                     display: none;
                     margin-top: 0.3rem;
@@ -195,10 +150,6 @@ body{
 
                     .mob_btn{
                         @include set_button()
-                    }
-
-                    .mob_btn:focus{
-                        @include btn_focus()
                     }
 
                     .mob_btn:active{
@@ -305,10 +256,6 @@ body{
                 @include drop_btn();
                 font-size: 1rem;
                 color: $text_class;
-            }
-
-            button:focus{
-                @include btn_focus();
             }
 
             .dots{
@@ -437,14 +384,11 @@ a{
                     @include remove_default_btn();
                     margin: 0 0 1.2rem 0;
                     padding: 0 0 0.03rem 0.2rem;
+                    transition-duration: .2s;
                 }
-        
-                .menu_btn:focus{
-                    @include btn_focus();
-                }
-        
-                .menu_btn:active{
-                    @include btn_active();
+
+                .menu_btn:hover{
+                    color: $text_class
                 }
             }
 
