--- a/css/styles-light.scss
+++ b/css/styles-light.scss
@@ -8,6 +8,7 @@ $background_transparent: #1E1E1E7F;
     background: none;
     cursor: pointer;
     border:none;
+    outline: none;
 }
 
 @mixin set_button{
@@ -17,12 +18,14 @@ $background_transparent: #1E1E1E7F;
     color: $text_main;
     background-color: $background;
     border: 1px solid $text_main;
+    outline: none;
     margin: 0.4rem;
     cursor: pointer;
 }
 
 @mixin remove_default_btn{
     border: none;
+    outline: none;
     display: inline-block;
     text-decoration: none;
     background-color: $background;
@@ -32,10 +35,6 @@ $background_transparent: #1E1E1E7F;
     text-align: left;
     padding: 0;
     cursor: pointer;
-}
-
-@mixin btn_focus{
-    outline: none;  
 }
 
 @mixin btn_active{
@@ -81,11 +80,7 @@ body{
                         max-height: 1.2rem;
                         min-width: 1.2rem;
                     }
-                }
-
-                #settings_btn:focus{
-                    @include btn_focus();
-                }             
+                }            
                                 
                 .dropdown{
                     display: none;
@@ -103,10 +98,6 @@ body{
 
                     .set_btn{
                         @include set_button();
-                    }
-                    
-                    .set_btn:focus{
-                        @include btn_focus();
                     }
 
                     .set_btn:active{
@@ -143,10 +134,6 @@ body{
                     }
                 }   
                 
-                #mob_menu_btn:focus{
-                    @include btn_focus();
-                }  
-
                 .dropdown{
                     display: none;
                     margin-top: 0.3rem;
@@ -157,10 +144,6 @@ body{
 
                     .mob_btn{
                         @include set_button()
-                    }
-
-                    .mob_btn:focus{
-                        @include btn_focus()
                     }
 
                     .mob_btn:active{
@@ -267,10 +250,6 @@ body{
                 @include drop_btn();
                 font-size: 1rem;
                 color: $text_class;
-            }
-
-            button:focus{
-                @include btn_focus();
             }
 
             .dots{
@@ -399,14 +378,11 @@ a{
                     @include remove_default_btn();
                     margin: 0 0 1.2rem 0;
                     padding: 0 0 0.03rem 0.2rem;
+                    transition-duration: .2s;
                 }
-        
-                .menu_btn:focus{
-                    @include btn_focus();
-                }
-        
-                .menu_btn:active{
-                    @include btn_active();
+
+                .menu_btn:hover{
+                    color: $text_class
                 }
             }
 
