add blinking cursor to under title on mobile menu

--- a/css/styles.css
+++ b/css/styles.css
@@ -94,7 +94,7 @@ body {
 
 @keyframes drop {
   from {
-    height: 0%;
+    height: 2.4rem;
   }
   to {
     height: 100%;
@@ -115,7 +115,7 @@ body {
 
 @-webkit-keyframes drop {
   from {
-    height: 0%;
+    height: 2.4rem;
   }
   to {
     height: 100%;
@@ -156,9 +156,9 @@ body {
   outline: none;
   border: none;
   animation-name: fade_in;
-  animation-duration: 0.5s;
+  animation-duration: 0.7s;
   -webkit-animation-name: fade_in;
-  -webkit-animation-duration: 0.5s;
+  -webkit-animation-duration: 0.7s;
   cursor: pointer;
 }
 
@@ -196,9 +196,9 @@ body {
       grid-template-rows: 2.4rem 2.4rem 2.4rem 2.4rem 2.4rem 2.4rem 1fr;
   height: 100%;
   animation-name: drop;
-  animation-duration: 0.3s;
+  animation-duration: 1s;
   -webkit-animation-name: drop;
-  -webkit-animation-duration: 0.3s;
+  -webkit-animation-duration: 1s;
 }
 
 .main_wrapper #menu_div {
