--- a/css/styles-light.scss
+++ b/css/styles-light.scss
@@ -55,7 +55,6 @@ body{
     grid-template-rows: 2rem 2.4rem 2.4rem 2.4rem 1fr ;
 
     .head_content{
-        //Header including site title and settings menu
         grid-column: 2/7; 
         grid-row: 2;       
         
@@ -65,51 +64,29 @@ body{
             justify-content: space-between;
 
             .runner {
-                //Print out of the title
                 color: $text_main;
                 cursor: pointer;
             }
 
-            .settings{
-                //Dropdown menu for settings
-                
-                #settings_btn{
+            .new_mob_menu {
+                display: flex;
+
+                #mob_menu_btn{
                     @include drop_btn();
 
                     img{
                         max-height: 1.2rem;
                         min-width: 1.2rem;
                     }
-                }            
-                                
-                .dropdown{
-                    display: none;
-                    margin-top: 0.5rem;
-                    position: absolute;
-                    z-index: 1;
-                    right: 9%;
-                    background-color: $background;                    
+                } 
+            }
 
-                    img{
-                        max-height: 1rem;
-                        min-width: 1rem;
-                        padding-top: 0.2rem;
-                    }
-
-                    .set_btn{
-                        @include set_button();
-                    }
-
-                    .set_btn:active{
-                        @include btn_active();
-                        border:1px solid $text_class;
-                    }                                                           
-                }                
+            .settings{
+                display: none;                             
             }
         }
     }
     #inner_content{
-        //"sub-header"-row, containg title of currently selected section and content-menu
         grid-column: 2/7; 
         grid-row: 3;
 
@@ -125,42 +102,123 @@ body{
 
             #menu_bar{
                 
-                #mob_menu_btn{
-                    @include drop_btn();
+                @keyframes drop {
+                    from{height:2.4rem;}
+                    to{height:100%}
+                }
 
-                    img{
-                        max-height: 1.2rem;
-                        min-width: 1.2rem;
-                    }
-                }   
-                
+                @keyframes fade_in {
+                    from{opacity:0;}
+                    50%{opacity:0;}
+                    to{opacity:1;}
+                }
+
+                @-webkit-keyframes drop {
+                    from{height:2.4rem;}
+                    to{height:100%}
+                }
+
+                @-webkit-keyframes fade_in {
+                    from{opacity:0;}
+                    50%{opacity:0;}
+                    to{opacity:1;}
+                }
+
                 .dropdown{
                     display: none;
-                    margin-top: 0.3rem;
                     position: absolute;
                     z-index: 1;
-                    right: 9%;
-                    background-color: $background;
-
+                    width: 100%;
+                    right: 0%;
+                    border-bottom: 0.2rem solid $text_main;
+                    background-color:$background;                    
+                    
                     .mob_btn{
-                        @include set_button()
+                        grid-column: 2/7;                        
+                        font-size: 1rem;
+                        text-align: left;
+                        color: $text_main;
+                        background-color: transparent;
+                        padding: 0;
+                        outline:none;
+                        border: none;
+                        animation-name: fade_in;
+                        animation-duration: 0.7s;
+                        -webkit-animation-name: fade_in;
+                        -webkit-animation-duration: 0.7s;
+                        cursor: pointer;                       
                     }
 
-                    .mob_btn:active{
-                        @include btn_active()
+                    #title_load{
+                        grid-column: 2/7;
+                        grid-row: 1;
+                        color: $text_main;
+                        font-size: 1rem;
                     }
+
+                    #mob_about_btn {
+                        grid-row: 2;
+                    }
+
+                    #mob_works_btn {
+                        grid-row: 4;
+                    }
+
+                    #mob_contact_btn {
+                        grid-row: 6;
+                    }
+
+                    #set_btns_mob{
+                        grid-column: 2/7;
+                        grid-row: 8;
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: space-between;
+                        animation-name: fade_in;
+                        animation-duration: 0.7s;
+                        -webkit-animation-name: fade_in;
+                        -webkit-animation-duration: 0.7s;
+
+                        .set_btn{
+                            height: 2.4rem;
+                            width: 40%;
+                            padding-left:auto;
+                            padding-right:auto;
+                            color: $text_main;
+                            background-color: $background;
+                            border: 1px solid $text_main;
+                            outline: none;
+                            margin: 0;
+                            cursor: pointer;
+
+                            img{
+                                max-height: 1rem;
+                                min-width: 1rem;
+                                padding-top: 0.2rem;
+                            }
+                        }
+                    }
+                }
+
+                .dropdown_active{
+                    display: grid;
+                    grid-template-columns: 1fr 2fr 2fr 2fr 1fr 1fr 1fr;
+                    grid-template-rows: 2.4rem 2.4rem 2.4rem 2.4rem 2.4rem 2.4rem 2.4rem 2.4rem 1fr ;
+                    height: 100%;
+                    animation-name: drop;
+                    animation-duration: 1s;
+                    -webkit-animation-name: drop;
+                    -webkit-animation-duration: 1s;
                 }
             }               
         }
     }
 
     #menu_div{
-        //content-menu buttons for desktop, created with js
         display: none;
     }
 
     #main_content{
-        //main content part of the page
         grid-column: 2/7; 
         grid-row: 5;
 
@@ -192,13 +250,11 @@ body{
     }
 
     #main_works{
-        //container of portfolio-carousel
         display: none;
         grid-column: 1/8; 
         grid-row: 4/6;
 
         .presentation{
-            //container of a individual "case"
             display: none;
             position: absolute;
             width: 100%;
@@ -211,7 +267,6 @@ body{
             z-index: -2;         
             
             .transparent{
-                //transparent color-block to increase text visibility
                 grid-column: 1/8;
                 grid-row: 1/3;   
                 opacity: 0.6;  
@@ -220,7 +275,6 @@ body{
             }
     
             .pres_text{
-                //presentation text
                 display: block;
                 grid-column: 2/7;
                 grid-row: 2;  
@@ -234,7 +288,6 @@ body{
         } 
 
         #slide_control{
-            //buttons and navigation-dots for the carousel
             display: flex;
             flex-direction: row;
             justify-content: space-between;
@@ -362,6 +415,50 @@ a{
         .head_content{
             grid-column: 2/9; 
             grid-row: 2;
+
+            header {
+
+                .new_mob_menu {                    
+                    display:none;
+                }
+
+                .settings{
+                    display: inline-block;
+                    
+                    #settings_btn{
+                        @include drop_btn();
+    
+                        img{
+                            max-height: 1.2rem;
+                            min-width: 1.2rem;
+                        }
+                    }            
+                                    
+                    .dropdown{
+                        display: none;
+                        margin-top: 0.5rem;
+                        position: absolute;
+                        z-index: 1;
+                        right: 9%;
+                        background-color: $background;                    
+    
+                        img{
+                            max-height: 1rem;
+                            min-width: 1rem;
+                            padding-top: 0.2rem;
+                        }
+    
+                        .set_btn{
+                            @include set_button();
+                        }
+    
+                        .set_btn:active{
+                            @include btn_active();
+                            border:1px solid $text_class;
+                        }                                                           
+                    }                
+                }
+            }
         }
 
         #inner_content{   
@@ -369,7 +466,6 @@ a{
             grid-row: 4;
             
             #menu_div{
-                //menu-buttons for desktop
                 columns: 1;
                 display: flex;
                 flex-direction: column;
