--- a/css/styles.css
+++ b/css/styles.css
@@ -187,13 +187,54 @@ body {
   grid-row: 6;
 }
 
+.main_wrapper #inner_content #mob_menu #menu_bar .dropdown #set_btns_mob {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 5;
+  grid-column: 2/7;
+  -ms-grid-row: 8;
+  grid-row: 8;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  animation-name: fade_in;
+  animation-duration: 0.7s;
+  -webkit-animation-name: fade_in;
+  -webkit-animation-duration: 0.7s;
+}
+
+.main_wrapper #inner_content #mob_menu #menu_bar .dropdown #set_btns_mob .set_btn {
+  height: 2.4rem;
+  width: 40%;
+  padding-left: auto;
+  padding-right: auto;
+  color: #FFFFFF;
+  background-color: #1E1E1E;
+  border: 1px solid #FFFFFF;
+  outline: none;
+  margin: 0;
+  cursor: pointer;
+}
+
+.main_wrapper #inner_content #mob_menu #menu_bar .dropdown #set_btns_mob .set_btn img {
+  max-height: 1rem;
+  min-width: 1rem;
+  padding-top: 0.2rem;
+}
+
 .main_wrapper #inner_content #mob_menu #menu_bar .dropdown_active {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 2fr 2fr 2fr 1fr 1fr 1fr;
       grid-template-columns: 1fr 2fr 2fr 2fr 1fr 1fr 1fr;
-  -ms-grid-rows: 2.4rem 2.4rem 2.4rem 2.4rem 2.4rem 2.4rem 1fr;
-      grid-template-rows: 2.4rem 2.4rem 2.4rem 2.4rem 2.4rem 2.4rem 1fr;
+  -ms-grid-rows: 2.4rem 2.4rem 2.4rem 2.4rem 2.4rem 2.4rem 2.4rem 2.4rem 1fr;
+      grid-template-rows: 2.4rem 2.4rem 2.4rem 2.4rem 2.4rem 2.4rem 2.4rem 2.4rem 1fr;
   height: 100%;
   animation-name: drop;
   animation-duration: 1s;
