--- a/css/styles.scss
+++ b/css/styles.scss
@@ -29,19 +29,6 @@ $text_javadocKeyword: #D9E577;
     cursor: pointer;
 }
 
-// @mixin mob_menu_btn{
-//     font-size: 1rem;
-//     text-align: left;
-//     //height: 2.4rem;
-//     color: $text_main;
-//     background-color: $background;
-//     //margin: 1rem 0;
-//     padding: 0;
-//     outline:none;
-//     border: none;
-//     cursor: pointer;
-// }
-
 @mixin remove_default_btn{
     border: none;
     outline: none;
@@ -74,7 +61,6 @@ body{
     grid-template-rows: 2rem 2.4rem 2.4rem 2.4rem 1fr ;
 
     .head_content{
-        //Header including site title and settings menu
         grid-column: 2/7; 
         grid-row: 2;       
         
@@ -84,7 +70,6 @@ body{
             justify-content: space-between;
 
             .runner {
-                //Print out of the title
                 color: $text_main;
                 cursor: pointer;
             }
@@ -103,46 +88,11 @@ body{
             }
 
             .settings{
-                //Dropdown menu for settings
-                display: none;
-                
-                // #settings_btn{
-                //     @include drop_btn();
-
-                //     img{
-                //         max-height: 1.2rem;
-                //         min-width: 1.2rem;
-                //     }
-                // }            
-                                
-                // .dropdown{
-                //     display: none;
-                //     margin-top: 0.5rem;
-                //     position: absolute;
-                //     z-index: 1;
-                //     right: 9%;
-                //     background-color: $background;                    
-
-                //     img{
-                //         max-height: 1rem;
-                //         min-width: 1rem;
-                //         padding-top: 0.2rem;
-                //     }
-
-                //     .set_btn{
-                //         @include set_button();
-                //     }
-
-                //     .set_btn:active{
-                //         @include btn_active();
-                //         border:1px solid $text_class;
-                //     }                                                           
-                // }                
+                display: none;                             
             }
         }
     }
     #inner_content{
-        //"sub-header"-row, containg title of currently selected section and content-menu
         grid-column: 2/7; 
         grid-row: 3;
 
@@ -223,12 +173,43 @@ body{
                     #mob_contact_btn {
                         grid-row: 6;
                     }
+
+                    #set_btns_mob{
+                        grid-column: 2/7;
+                        grid-row: 8;
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: space-between;
+                        animation-name: fade_in;
+                        animation-duration: 0.7s;
+                        -webkit-animation-name: fade_in;
+                        -webkit-animation-duration: 0.7s;
+
+                        .set_btn{
+                            height: 2.4rem;
+                            width: 40%;
+                            padding-left:auto;
+                            padding-right:auto;
+                            color: $text_main;
+                            background-color: $background;
+                            border: 1px solid $text_main;
+                            outline: none;
+                            margin: 0;
+                            cursor: pointer;
+
+                            img{
+                                max-height: 1rem;
+                                min-width: 1rem;
+                                padding-top: 0.2rem;
+                            }
+                        }
+                    }
                 }
 
                 .dropdown_active{
                     display: grid;
                     grid-template-columns: 1fr 2fr 2fr 2fr 1fr 1fr 1fr;
-                    grid-template-rows: 2.4rem 2.4rem 2.4rem 2.4rem 2.4rem 2.4rem 1fr ;
+                    grid-template-rows: 2.4rem 2.4rem 2.4rem 2.4rem 2.4rem 2.4rem 2.4rem 2.4rem 1fr ;
                     height: 100%;
                     animation-name: drop;
                     animation-duration: 1s;
@@ -240,12 +221,10 @@ body{
     }
 
     #menu_div{
-        //content-menu buttons for desktop, created with js
         display: none;
     }
 
     #main_content{
-        //main content part of the page
         grid-column: 2/7; 
         grid-row: 5;
 
@@ -277,13 +256,11 @@ body{
     }
 
     #main_works{
-        //container of portfolio-carousel
         display: none;
         grid-column: 1/8; 
         grid-row: 4/6;
 
         .presentation{
-            //container of a individual "case"
             display: none;
             position: absolute;
             width: 100%;
@@ -296,7 +273,6 @@ body{
             z-index: -2;         
             
             .transparent{
-                //transparent color-block to increase text visibility
                 grid-column: 1/8;
                 grid-row: 1/3;   
                 opacity: 0.6;  
@@ -305,7 +281,6 @@ body{
             }
     
             .pres_text{
-                //presentation text
                 display: block;
                 grid-column: 2/7;
                 grid-row: 2;  
@@ -319,7 +294,6 @@ body{
         } 
 
         #slide_control{
-            //buttons and navigation-dots for the carousel
             display: flex;
             flex-direction: row;
             justify-content: space-between;
@@ -455,7 +429,6 @@ a{
                 }
 
                 .settings{
-                    //Dropdown menu for settings
                     display: inline-block;
                     
                     #settings_btn{
@@ -499,7 +472,6 @@ a{
             grid-row: 4;
             
             #menu_div{
-                //menu-buttons for desktop
                 columns: 1;
                 display: flex;
                 flex-direction: column;
