--- a/css/styles.css
+++ b/css/styles.css
@@ -115,22 +115,22 @@ body {
 
 @-webkit-keyframes drop {
   from {
-    height: 2.4rem;
+    -webkit-height: 2.4rem;
   }
   to {
-    height: 100%;
+    -webkit-height: 100%;
   }
 }
 
 @-webkit-keyframes fade_in {
   from {
-    opacity: 0;
+    -webkit-opacity: 0;
   }
   50% {
-    opacity: 0;
+    -webkit-opacity: 0;
   }
   to {
-    opacity: 1;
+    -webkit-opacity: 1;
   }
 }
 
