--- a/css/styles-light.scss
+++ b/css/styles-light.scss
@@ -326,6 +326,10 @@ body{
                 }
             }
         }
+
+        #react_crud{
+            background-image: url(../img/react_crud_screen_mob.jpg);
+        }
         
         #audioplayer{
             background-image: url(../img/audioplayer_screen_mob.jpg);
@@ -578,6 +582,10 @@ a{
                     width: 10%;
                     align-self: flex-end;
                 }
+            }
+
+            #react_crud{
+                background-image: url(../img/react_crud_screen.JPG);
             }
 
             #audioplayer{
