--- a/css/styles.scss
+++ b/css/styles.scss
@@ -332,6 +332,10 @@ body{
                 }
             }
         }
+
+        #react_crud{
+            background-image: url(../img/react_crud_screen_mob.jpg);
+        }
         
         #audioplayer{
             background-image: url(../img/audioplayer_screen_mob.jpg);
@@ -584,6 +588,10 @@ a{
                     width: 10%;
                     align-self: flex-end;
                 }
+            }
+
+            #react_crud{
+                background-image: url(../img/react_crud_screen.JPG);
             }
 
             #audioplayer{
