update file names

--- a/css/styles-light.scss
+++ b/css/styles-light.scss
@@ -585,19 +585,19 @@ a{
             }
 
             #react_crud{
-                background-image: url(../img/react_crud_screen.JPG);
+                background-image: url(../img/react_crud_screen.jpg);
             }
 
             #audioplayer{
-                background-image: url(../img/audioplayer_screen.JPG);
+                background-image: url(../img/audioplayer_screen.jpg);
             }
     
             #quiz{
-                background-image: url(../img/quiz_screen.JPG);
+                background-image: url(../img/quiz_screen.jpg);
             }
     
             #old_portfolio{
-                background-image: url(../img/old_portfolio_screen.JPG);
+                background-image: url(../img/old_portfolio_screen.jpg);
             }
         }
     }    
