--- a/css/styles.css
+++ b/css/styles.css
@@ -661,16 +661,16 @@ a {
         align-self: flex-end;
   }
   .main_wrapper #main_works #react_crud {
-    background-image: url(../img/react_crud_screen.JPG);
+    background-image: url(../img/react_crud_screen.jpg);
   }
   .main_wrapper #main_works #audioplayer {
-    background-image: url(../img/audioplayer_screen.JPG);
+    background-image: url(../img/audioplayer_screen.jpg);
   }
   .main_wrapper #main_works #quiz {
-    background-image: url(../img/quiz_screen.JPG);
+    background-image: url(../img/quiz_screen.jpg);
   }
   .main_wrapper #main_works #old_portfolio {
-    background-image: url(../img/old_portfolio_screen.JPG);
+    background-image: url(../img/old_portfolio_screen.jpg);
   }
 }
 /*# sourceMappingURL=styles.css.map */
