update file names 2

--- a/css/styles.css
+++ b/css/styles.css
@@ -664,13 +664,13 @@ a {
     background-image: url(../img/react_crud_screen.jpg);
   }
   .main_wrapper #main_works #audioplayer {
-    background-image: url(../img/audioplayer_screen.jpg);
+    background-image: url(../img/audioplayer_screen.JPG);
   }
   .main_wrapper #main_works #quiz {
-    background-image: url(../img/quiz_screen.jpg);
+    background-image: url(../img/quiz_screen.JPG);
   }
   .main_wrapper #main_works #old_portfolio {
-    background-image: url(../img/old_portfolio_screen.jpg);
+    background-image: url(../img/old_portfolio_screen.JPG);
   }
 }
 /*# sourceMappingURL=styles.css.map */
