--- a/css/styles.scss
+++ b/css/styles.scss
@@ -595,15 +595,15 @@ a{
             }
 
             #audioplayer{
-                background-image: url(../img/audioplayer_screen.jpg);
+                background-image: url(../img/audioplayer_screen.JPG);
             }
     
             #quiz{
-                background-image: url(../img/quiz_screen.jpg);
+                background-image: url(../img/quiz_screen.JPG);
             }
     
             #old_portfolio{
-                background-image: url(../img/old_portfolio_screen.jpg);
+                background-image: url(../img/old_portfolio_screen.JPG);
             }
         }
     }    
