--- a/css/styles-light.scss
+++ b/css/styles-light.scss
@@ -589,15 +589,15 @@ a{
             }
 
             #audioplayer{
-                background-image: url(../img/audioplayer_screen.jpg);
+                background-image: url(../img/audioplayer_screen.JPG);
             }
     
             #quiz{
-                background-image: url(../img/quiz_screen.jpg);
+                background-image: url(../img/quiz_screen.JPG);
             }
     
             #old_portfolio{
-                background-image: url(../img/old_portfolio_screen.jpg);
+                background-image: url(../img/old_portfolio_screen.JPG);
             }
         }
     }    
